--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.Grupo07_CrudCinica"
         tools:targetApi="31">
         <activity
+            android:name=".Tratamiento.MenuTratamientoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Tratamiento.EliminarTratamientoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Tratamiento.ActualizarTratamientoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Tratamiento.ConsultarTratamientoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Tratamiento.InsertarTratamientoActivity"
+            android:exported="false" />
+        <activity
             android:name=".Hospital.EliminarHospitalActivity"
             android:exported="false" />
         <activity
