--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,37 @@
         android:theme="@style/Theme.Grupo07_CrudCinica"
         tools:targetApi="31">
         <activity
+            android:name=".Factura.ActualizarFacturaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Factura.ConsultarFacturaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Factura.EliminarFacturaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Factura.InsertarFacturaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Factura.FacturaMenuActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Consulta.EliminarConsultaActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Grupo07_CrudCinica" />
+        <activity
+            android:name=".Consulta.ActualizarConsultaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Consulta.ConsultarConsultaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Consulta.InsertarConsultaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Consulta.ConsultaMenuActivity"
+            android:exported="false" />
+        <activity
             android:name=".Hospital.EliminarHospitalActivity"
             android:exported="false" />
         <activity
